Configuring an App

--- a/build.gradle
+++ b/build.gradle
@@ -19,10 +19,27 @@ plugins {
 
 apply plugin: 'org.springframework.boot'
 
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web:$springBootVersion")
+    compile("org.hibernate.validator:hibernate-validator:6.0.13.Final")
+    compile("org.springframework:spring-web:5.0.10.RELEASE")
+    compile("org.springframework:spring-webmvc:5.0.10.RELEASE")
+    compile("org.springframework.boot:spring-boot-starter:2.0.6.RELEASE")
+    compile("org.springframework.boot:spring-boot-starter-json:2.0.6.RELEASE")
+    compile("org.springframework.boot:spring-boot-starter-tomcat:2.0.6.RELEASE")
+    testCompile("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
+
+
 }
+
+bootRun.environment([
+        "WELCOME_MESSAGE": "hello",
+])
+
+test.environment([
+        "WELCOME_MESSAGE": "Hello from test",
+])
