--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-json:2.0.6.RELEASE")
     compile("org.springframework.boot:spring-boot-starter-tomcat:2.0.6.RELEASE")
     testCompile("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
-
-
+    testCompile("org.mockito:mockito-core:2.23.4")
 }
 
 bootRun.environment([
